# CppMLearnKit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cppMLKit/: DecicionTree.h  LabelEncoder.h  LogisticRegression.h  Matrix.h  myVector.h
cppMLKitLib/: DecisionTree.cpp
data/: testSetIn.txt  testSetLabel.txt
example/: testDecisionTree.cpp  testMyVector.cpp
tests/: test.cpp  testLogReg.cpp
